--- a/index.html
+++ b/index.html
@@ -14,107 +14,119 @@
 
     <title>Frontend Mentor | Recipe page</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
 
   <body>
-    <div class="principal">
+    <div class="container">
       <div class="image">
         <img src="assets\images\image-omelette.jpeg" alt="" class="comida" />
       </div>
-      <h1>Simple Omelette Recipe</h1>
-      <p>
-        An easy and quick dish, perfect for any meal. This classic omelette
-        combines beaten eggs cooked to perfection, optionally filled with your
-        choice of cheese, vegetables, or meats.
-      </p>
-      <div class="info-comida">
-        <h3>Preparation time</h3>
-        Total: Approximately 10 minutes<br />
-        Preparation: 5 minutes<br />
-        Cooking: 5 minutes
+
+      <div class="description">
+        <h1>Simple Omelette Recipe</h1>
+        <p>
+          An easy and quick dish, perfect for any meal. This classic omelette
+          combines beaten eggs cooked to perfection, optionally filled with your
+          choice of cheese, vegetables, or meats.
+        </p>
+
+        <div class="recipe-time">
+          <h3>Preparation time</h3>
+          <ul>
+            <li><span>Total</span>: Approximately 10 minutes</li>
+            <li><span>Preparation</span>: 5 minutes</li>
+            <li><span>Cooking</span>: 5 minutes</li>
+          </ul>
+        </div>
+
+        <div class="recipe-step">
+          <h2>Ingredients</h2>
+          <ul class="Ingredients">
+            <li><span>2-3 large eggs</span></li>
+            <li><span>Salt, to taste</span></li>
+            <li><span>Pepper, to taste</span></li>
+            <li><span>1 tablespoon of butter or oil</span></li>
+            <li>
+              <span
+                >Optional fillings: cheese, diced vegetables, cooked meats,
+                herbs</span
+              >
+            </li>
+          </ul>
+        </div>
+
+        <hr>
+
+        <div class="instructions">
+          <h2>Instructions</h2>
+          <ol>
+            <li>
+              <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a
+              pinch of salt and pepper until they are well mixed. You can add a
+              tablespoon of water or milk for a fluffier texture.
+            </li>
+            <li>
+              <strong>Heat the pan:</strong> Place a non-stick frying pan over
+              medium heat and add butter or oil.
+            </li>
+            <li>
+              <strong>Cook the omelette:</strong> Once the butter is melted and
+              bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
+              coat the surface.
+            </li>
+            <li>
+              <strong>Add fillings (optional):</strong> When the eggs begin to
+              set at the edges but are still slightly runny in the middle,
+              sprinkle your chosen fillings over one half of the omelette.
+            </li>
+            <li>
+              <strong>Fold and serve:</strong> As the omelette continues to
+              cook, carefully lift one edge and fold it over the fillings. Let
+              it cook for another minute, then slide it onto a plate.
+            </li>
+            <li>
+              <strong>Enjoy:</strong> Serve hot, with additional salt and pepper
+              if needed.
+            </li>
+          </ol>
+        </div>
+
+        <hr>
+
+        <div class="nutrition">
+          <h2>Nutrition</h2>
+          <p>
+            The table below shows nutritional values per serving without the
+            additional fillings.
+          </p>
+          <table>
+            <tr>
+              <td>Calories</td>
+              <td>277kcal</td>
+            </tr>
+            <tr>
+              <td>Carbs</td>
+              <td>0g</td>
+            </tr>
+            <tr>
+              <td>Protein</td>
+              <td>20g</td>
+            </tr>
+            <tr>
+              <td>Fat</td>
+              <td>22g</td>
+            </tr>
+          </table>
+        </div>
       </div>
-      <h1>Ingredients</h1>
-      <ul>
-        <li>2-3 large eggs</li>
-        <li>Salt, to taste</li>
-        <li>Pepper, to taste</li>
-        <li>1 tablespoon of butter or oil</li>
-        <li>
-          Optional fillings: cheese, diced vegetables, cooked meats, herbs
-        </li>
-      </ul>
-
-      <h1>Instructions</h1>
-      <ol>
-        <li>
-          <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch
-          of salt and pepper until they are well mixed. You can add a tablespoon
-          of water or milk for a fluffier texture.
-        </li>
-        <li>
-          <strong>Heat the pan:</strong> Place a non-stick frying pan over
-          medium heat and add butter or oil.
-        </li>
-        <li>
-          <strong>Cook the omelette:</strong> Once the butter is melted and
-          bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
-          coat the surface.
-        </li>
-        <li>
-          <strong>Add fillings (optional):</strong> When the eggs begin to set
-          at the edges but are still slightly runny in the middle, sprinkle your
-          chosen fillings over one half of the omelette.
-        </li>
-        <li>
-          <strong>Fold and serve:</strong> As the omelette continues to cook,
-          carefully lift one edge and fold it over the fillings. Let it cook for
-          another minute, then slide it onto a plate.
-        </li>
-        <li>
-          <strong>Enjoy:</strong> Serve hot, with additional salt and pepper if
-          needed.
-        </li>
-      </ol>
-      <h1>Nutrition</h1>
-      <p>
-        The table below shows nutritional values per serving without the
-        additional fillings.
-      </p>
-      <table>
-        <tr>
-          <td>Calories</td>
-          <td>277kcal</td>
-        </tr>
-        <tr>
-          <td>Carbs</td>
-          <td>0g</td>
-        </tr>
-        <tr>
-          <td>Protein</td>
-          <td>20g</td>
-        </tr>
-        <tr>
-          <td>Fat</td>
-          <td>22g</td>
-        </tr>
-      </table>
     </div>
-
+    <!-- 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Maurício Gaspary</a>.
     </div>
+     -->
   </body>
 </html>
