--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="recipe-step">
           <h2>Ingredients</h2>
-          <ul class="Ingredients">
+          <ul class="ingredients">
             <li><span>2-3 large eggs</span></li>
             <li><span>Salt, to taste</span></li>
             <li><span>Pepper, to taste</span></li>
@@ -55,68 +55,68 @@
           </ul>
         </div>
 
-        <hr>
+        <hr/>
 
         <div class="instructions">
           <h2>Instructions</h2>
-          <ol>
+          <ol class="properList">
             <li>
-              <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a
+              <span>Beat the eggs:</span> In a bowl, beat the eggs with a
               pinch of salt and pepper until they are well mixed. You can add a
               tablespoon of water or milk for a fluffier texture.
             </li>
             <li>
-              <strong>Heat the pan:</strong> Place a non-stick frying pan over
+              <span>Heat the pan:</span> Place a non-stick frying pan over
               medium heat and add butter or oil.
             </li>
             <li>
-              <strong>Cook the omelette:</strong> Once the butter is melted and
+              <span>Cook the omelette:</span> Once the butter is melted and
               bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
               coat the surface.
             </li>
             <li>
-              <strong>Add fillings (optional):</strong> When the eggs begin to
+              <span>Add fillings (optional):</span> When the eggs begin to
               set at the edges but are still slightly runny in the middle,
               sprinkle your chosen fillings over one half of the omelette.
             </li>
             <li>
-              <strong>Fold and serve:</strong> As the omelette continues to
+              <span>Fold and serve:</span> As the omelette continues to
               cook, carefully lift one edge and fold it over the fillings. Let
               it cook for another minute, then slide it onto a plate.
             </li>
             <li>
-              <strong>Enjoy:</strong> Serve hot, with additional salt and pepper
+              <span>Enjoy:</span> Serve hot, with additional salt and pepper
               if needed.
             </li>
           </ol>
         </div>
 
-        <hr>
+        <hr/>
 
         <div class="nutrition">
           <h2>Nutrition</h2>
-          <p>
+          <p class="values">
             The table below shows nutritional values per serving without the
             additional fillings.
           </p>
-          <table>
-            <tr>
-              <td>Calories</td>
-              <td>277kcal</td>
-            </tr>
-            <tr>
-              <td>Carbs</td>
-              <td>0g</td>
-            </tr>
-            <tr>
-              <td>Protein</td>
-              <td>20g</td>
-            </tr>
-            <tr>
-              <td>Fat</td>
-              <td>22g</td>
-            </tr>
-          </table>
+
+          <div class="nutrition-table">
+            <div class="item">
+              <p>Calories</p>
+              <p class="ammount">277kcal</p>
+            </div>
+            <div class="item">
+              <p>Carbs</p>
+              <p class="ammount">0g</p>
+            </div>
+            <div class="item">
+              <p>Protein</p>
+              <p class="ammount">20g</p>
+            </div>
+            <div class="item">
+              <p>Fat</p>
+              <p class="ammount">22g</p>
+            </div>
         </div>
       </div>
     </div>
